# autonomous-exploration-robot

./: LICENSE  README.md
furbo_description/: CMakeLists.txt  package.xml
furbo_description/config/: controllers.yaml  ekf.yaml  gz_bridge.yaml  nav2_params.yaml  slam_toolbox.yaml
furbo_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
furbo_description/install/furbo_description/share/ament_index/resource_index/package_run_dependencies/: furbo_description
furbo_description/install/furbo_description/share/furbo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
furbo_description/install/furbo_description/share/furbo_description/cmake/: furbo_descriptionConfig-version.cmake  furbo_descriptionConfig.cmake
furbo_description/install/furbo_description/share/furbo_description/config/: controllers.yaml
furbo_description/install/furbo_description/share/furbo_description/environment/: ament_prefix_path.dsv  path.dsv
furbo_description/install/furbo_description/share/furbo_description/launch/: display.launch.py  gazebo.launch.py
furbo_description/install/furbo_description/share/furbo_description/urdf/: furbo.urdf.xacro
furbo_description/launch/: display.launch.py  gazebo.launch.py
furbo_description/log/: latest_build
furbo_description/scripts/: frontier_explorer.py
furbo_description/urdf/: furbo.urdf.xacro
furbo_description/worlds/: furbo_world.sdf
(+1 files in other folders)
